[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/FashionVictim.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/default.theme" type="Theme" id=2]
[ext_resource path="res://GUI/BottomFrame.png" type="Texture" id=3]
[ext_resource path="res://GUI/VisualMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="VisualMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -225.0
margin_right = 225.0
margin_bottom = 225.0
rect_min_size = Vector2( 450, 450 )
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 450.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "Visual Options"
align = 1

[node name="Seperator" type="TextureRect" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 450.0
margin_bottom = 130.0
rect_min_size = Vector2( 450, 32 )
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 450.0
margin_bottom = 340.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 116.0
margin_right = 333.0
margin_bottom = 206.0
columns = 2

[node name="DOF_Label" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 2.0
margin_right = 145.0
margin_bottom = 36.0
text = "Depth of Field"
align = 2

[node name="DOF_Check" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 149.0
margin_right = 217.0
margin_bottom = 38.0

[node name="ReflectionsLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 44.0
margin_right = 145.0
margin_bottom = 78.0
text = "Reflections"
align = 2

[node name="ReflectionsCheck" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 149.0
margin_top = 42.0
margin_right = 217.0
margin_bottom = 80.0

[node name="FogLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 86.0
margin_right = 145.0
margin_bottom = 120.0
text = "Fog"
align = 2

[node name="FogCheck" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 149.0
margin_top = 84.0
margin_right = 217.0
margin_bottom = 122.0

[node name="ParticlesLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 128.0
margin_right = 145.0
margin_bottom = 162.0
text = "Particles"
align = 2

[node name="ParticlesCheck" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 149.0
margin_top = 126.0
margin_right = 217.0
margin_bottom = 164.0

[node name="FarSightLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 170.0
margin_right = 145.0
margin_bottom = 204.0
text = "Far Sight"
align = 2

[node name="FarSightCheck" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 149.0
margin_top = 168.0
margin_right = 217.0
margin_bottom = 206.0

[node name="Seperator2" type="TextureRect" parent="VBoxContainer"]
margin_top = 344.0
margin_right = 450.0
margin_bottom = 376.0
rect_min_size = Vector2( 450, 32 )
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 450.0
margin_bottom = 418.0

[node name="DoneButton" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 197.0
margin_right = 252.0
margin_bottom = 38.0
text = "Done!"
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/DOF_Check" to="." method="_on_DOF_Check_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/ReflectionsCheck" to="." method="_on_ReflectionsCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/FogCheck" to="." method="_on_FogCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/ParticlesCheck" to="." method="_on_ParticlesCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/FarSightCheck" to="." method="_on_FarSightCheck_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/DoneButton" to="." method="_on_DoneButton_pressed"]
